info/03-freedriving_testdone/RemoteApi/include/DianaAPI.h

DIANA_API bool calcRobotArmAngle(/*IN[7]*/ double *dblJoints, /*OUT*/ double &dblAngle,
                                 /*IN*/ const char *strIpAddress = "");
/*************************************** version 1.10***************************************/

DIANA_API int freeDrivingWithLockedJoint(bool enable, /*IN*/ int intLockedJntIndex = -1,
                                         /*IN*/ const char *strIpAddress = "");
DIANA_API int freeDrivingWithLockedJoint_ex(/*IN*/ bool enable, /*[IN]*/ int intFrameType,
                                            /*IN[6]*/ double *dblForceDirection,
                                            /*IN*/ int intLockedJntIndex = -1, /*IN*/ const char *strIpAddress = "");
DIANA_API int freeDrivingForCurrentLoop(bool enable, /*IN*/ const char *strIpAddress = "");
DIANA_API int getCurrentLoopFreeDrivingState(/*IN*/ const char *strIpAddress = "");
DIANA_API int enterSafetyIdle(/*IN*/ const char *strIpAddress = "");
DIANA_API int leaveSafetyIdle(/*IN*/ const char *strIpAddress = "");
struct LoadIdentificationParam {
    LoadIdentificationParam(bool valid = false, double mass = 0.0, LoadIdentificationWaypoint *arr = nullptr,
                            int len = 0)
        : bIsMassValid(valid), dblMass(mass), arrWaypoints(arr), arrWaypointsSize(len) {}
    bool bIsMassValid;                         // default:false
    double dblMass;                            // default:0.0,
    LoadIdentificationWaypoint *arrWaypoints;  // default:nullptr,
    int arrWaypointsSize;                      // default:0
};
extern "C" typedef bool (*FNCSTOP)(const char *strIpAddress);
/***********************************
 *  identifyTcpPayload 函数返回值含义
 *  0：成功
 * -1：其他错误
 * -2：无法读取关节扭矩
 * -3：初始化失败
 * -4：采样失败
 * -5：传送辨识数据失败
 * -6：结果不可信
 * -7：负载辨识失败
 * -8：回调函数中断负载辨识
 * -9:robot正在执行负载辨识任务
 * -10:开启辨识失败
 * -11:结束负载辨识失败
 * -12:robot正在执行示教程序
 * *********************************/
DIANA_API int identifyTcpPayload(/*OUT[10]*/ double *dblResult, /*IN*/ FNCSTOP fnNeedStop = nullptr,
                                 /*IN*/ LoadIdentificationParam *ptrParam = nullptr,
                                 /*IN*/ const char *strIpAddress = "");
typedef struct color_rgb {
public:
    color_rgb(uint8_t r = 255, uint8_t g = 255, uint8_t b = 255) : red(r), green(g), blue(b) {}

public:
    uint8_t red;
    uint8_t green;
    uint8_t blue;
} led_color;
DIANA_API int getRgbLedState(/*OUT[7]*/ led_color *rgbLedColor, /*IN*/ const char *strIpAddress = "");
DIANA_API int setRgbLedState(/*IN[7]*/ led_color *rgbLedColor, /*IN*/ const char *strIpAddress = "");
DIANA_API int setCartImpeda(/*IN[6]*/ double *arrStiff, /*IN*/ double dblDampRatio, const char *strIpAddress = "");
DIANA_API int getCartImpeda(/*OUT[6]*/ double *arrStiff, /*OUT*/ double *dblDampRatio, const char *strIpAddress = "");
DIANA_API int setJointImpeda(/*IN[7]*/ double *arrStiff, /*IN*/ double dblDampRatio,
                             /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointImpeda(/*OUT[7]*/ double *arrStiff, /*OUT*/ double *dblDampRatio,
                             /*IN*/ const char *strIpAddress = "");
DIANA_API int getRobotNetworkInfo(char *strNetworkInfo, /*option*/ const char *strIpAddress = "");
DIANA_API int setRobotNetworkInfo(const char *strCurrentNetworkInfo, const char *strTargetNetworkInfo,
                                  /*option*/ const char *strIpAddress = "");
DIANA_API int getFunctionOptI4(/*IN*/ int intFunctionIndex, /*IN*/ int intOptName, /*OUT*/ int *intOptVal,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int setFunctionOptI4(/*IN*/ int intFunctionIndex, /*IN*/ int intOptName, /*IN*/ int intOptVal,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int getFunctionOptR8(/*IN*/ int intFunctionIndex, /*IN*/ int intOptName, /*OUT*/ double *dblOptVal,
                               /*IN*/ const char *strIpAddress = "");
DIANA_API int setFunctionOptR8(/*IN*/ int intFunctionIndex, /*IN*/ int intOptName, /*IN*/ double dblOptVal,
                               /*IN*/ const char *strIpAddress = "");