info/03-freedriving_testdone/RemoteApi/lib/DianaApi.py


def calcRobotArmAngle(joints, ipAddress = ''):
    dianaJointsPosition = DIANA_JOINTS_POSITION()
    dianaJointsPosition.values = (c_double*7)()
    for index in range(0, len(joints)):
        dianaJointsPosition.values[index] = joints[index]
    api_mod.calcRobotArmAngle.argtypes = [
        POINTER(DIANA_JOINTS_POSITION), POINTER(c_double), c_char_p]
    api_mod.calcRobotArmAngle.restype = c_bool
    dblAngle = c_double()
    ret = api_mod.calcRobotArmAngle(
        byref(dianaJointsPosition), byref(dblAngle), bytes(ipAddress.encode('utf-8')))
    return ret, dblAngle.value

def freeDrivingWithLockedJoint(enable, indexLockedJoint = -1, ipAddress = ''):
    api_mod.freeDrivingWithLockedJoint.argtypes = [c_bool, c_int, c_char_p]
    api_mod.freeDrivingWithLockedJoint.restype = c_int
    ret = api_mod.freeDrivingWithLockedJoint(enable, indexLockedJoint, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def freeDrivingWithLockedJoint_ex(enable, frame_type, force_direction, indexLockedJoint = -1, ipAddress = ''):
    dianaForceDirection = DIANA_FORCE_FULL_DIRECTION()
    dianaForceDirection.values = (c_double * 6)()
    for index in range(0, len(dianaForceDirection.values)):
        dianaForceDirection.values[index] = force_direction[index]
    api_mod.freeDrivingWithLockedJoint_ex.argtypes = [c_bool, c_int, POINTER(DIANA_FORCE_FULL_DIRECTION), c_int, c_char_p]
    api_mod.freeDrivingWithLockedJoint_ex.restype = c_int
    ret = api_mod.freeDrivingWithLockedJoint_ex(enable, frame_type, byref(dianaForceDirection), indexLockedJoint, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def freeDrivingForCurrentLoop(enable : bool, ipAddress = '') -> bool:
    api_mod.freeDrivingForCurrentLoop.argtypes = [c_bool, c_char_p]
    api_mod.freeDrivingForCurrentLoop.restype = c_int
    ret = api_mod.freeDrivingForCurrentLoop(enable, bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getCurrentLoopFreeDrivingState(ipAddress = '') -> int:
    api_mod.getCurrentLoopFreeDrivingState.argtypes = [c_char_p]
    api_mod.getCurrentLoopFreeDrivingState.restype = c_int
    ret = api_mod.getCurrentLoopFreeDrivingState(bytes(ipAddress.encode('utf-8')))
    return ret

def enterSafetyIdle(ipAddress = '') -> bool:
    api_mod.enterSafetyIdle.argtypes = [c_char_p]
    api_mod.enterSafetyIdle.restype = c_int
    ret = api_mod.enterSafetyIdle(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def leaveSafetyIdle(ipAddress = '') -> bool:
    api_mod.leaveSafetyIdle.argtypes = [c_char_p]
    api_mod.leaveSafetyIdle.restype = c_int
    ret = api_mod.leaveSafetyIdle(bytes(ipAddress.encode('utf-8')))
    return message(ret)

def identifyTcpPayload(result, fnIsStop=None, is_mass_valid=False, mass=0.0, waypoints=list(list()), vels=list(), ipAddress=''):
    if fnIsStop == None:
        fnIsStop = FNCSTOP()
    param = DIANA_LOAD_IDENTIFICATION_PARAM()
    param.bIsMassValid = is_mass_valid
    param.dblMass = mass
    sizeWP = len(waypoints)
    sizeVel = len(vels)
    if sizeWP != sizeVel:
        return load_identification_message(-13)
    param.arrWaypoints = (DIANA_LOAD_IDENTIFICATION_WAYPOINT*sizeWP)()
    param.arrWaypointsSize = sizeWP
    if sizeWP > 0: 
        for indexWP in range(0, sizeWP):
            for indexJNT in range(0, len(waypoints[0])):
                param.arrWaypoints[indexWP].joints[indexJNT] = waypoints[indexWP][indexJNT]
            param.arrWaypoints[indexWP].vel = vels[indexWP]
    arrResult = DIANA_LOAD_IDENTIFICATION_RESULT()
    arrResult.values = (c_double*10)()
    api_mod.identifyTcpPayload.argtypes = [POINTER(DIANA_LOAD_IDENTIFICATION_RESULT), FNCSTOP, POINTER(DIANA_LOAD_IDENTIFICATION_PARAM), c_char_p]
    api_mod.identifyTcpPayload.restype = c_int
    ret = api_mod.identifyTcpPayload(byref(arrResult), fnIsStop, byref(param), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(arrResult.values)) :
        result[index] = arrResult.values[index]
    return load_identification_message(ret)

def getRgbLedState(rgbLedState : list, ipAddress=''):
    dianaGetRgbLedState = DIANA_RGB_LED_ALL_JOINTS()
    api_mod.getRgbLedState.argtypes = [POINTER(DIANA_RGB_LED_ALL_JOINTS), c_char_p]
    api_mod.getRgbLedState.restype = c_int
    ret = api_mod.getRgbLedState(byref(dianaGetRgbLedState), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(dianaGetRgbLedState.color)): 
        rgbLedState.append([dianaGetRgbLedState.color[index].red,dianaGetRgbLedState.color[index].green,dianaGetRgbLedState.color[index].blue])
    return message(ret)

def setRgbLedState(rgbLedState : list, ipAddress = ''):
    dianaGetRgbLedState = DIANA_RGB_LED_ALL_JOINTS()
    for index in range(0, len(rgbLedState)):
        dianaGetRgbLedState.color[index].red   = rgbLedState[index][0]
        dianaGetRgbLedState.color[index].green = rgbLedState[index][1]
        dianaGetRgbLedState.color[index].blue  = rgbLedState[index][2]
    api_mod.setRgbLedState.argtypes = [POINTER(DIANA_RGB_LED_ALL_JOINTS), c_char_p]
    api_mod.setRgbLedState.restype = c_int
    ret = api_mod.setRgbLedState(byref(dianaGetRgbLedState), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def setJointImpeda(arrStiff, arrDampRatio, ipAddress=''):
    jointStiff = DIANA_JOINT_STIFF()
    jointStiff.values = (c_double*7)()
    for index in range(0, len(arrStiff)):
        jointStiff.values[index] = arrStiff[index]
    api_mod.setJointImpeda.argtypes = [
        POINTER(DIANA_JOINT_STIFF), c_double, c_char_p]
    api_mod.setJointImpeda.restype = c_int
    ret = api_mod.setJointImpeda(
        jointStiff, arrDampRatio[0], bytes(ipAddress.encode('utf-8')))
    return message(ret)


def getJointImpeda(arrStiff, arrDampRatio, ipAddress=''):
    jointStiff = DIANA_JOINT_STIFF()
    jointStiff.values = (c_double*7)()
    jointDampRatio = c_double()
    api_mod.getJointImpeda.argtypes = [
        POINTER(DIANA_JOINT_STIFF), POINTER(c_double), c_char_p]
    api_mod.getJointImpeda.restype = c_int
    ret = api_mod.getJointImpeda(byref(jointStiff), byref(
        jointDampRatio), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(arrStiff)):
        arrStiff[index] = jointStiff.values[index]
    arrDampRatio[0] = jointDampRatio.value
    return message(ret)

def setCartImpeda(arrStiff, arrDampRatio, ipAddress=''):
    cartStiff = DIANA_CART_STIFF()
    cartStiff.values = (c_double*6)()
    for index in range(0, len(cartStiff.values)):
        cartStiff.values[index] = arrStiff[index]
    api_mod.setCartImpeda.argtypes = [
        POINTER(DIANA_CART_STIFF), c_double, c_char_p]
    api_mod.setCartImpeda.restype = c_int
    ret = api_mod.setCartImpeda(
        cartStiff, arrDampRatio[0], bytes(ipAddress.encode('utf-8')))
    return message(ret)


def getCartImpeda(arrStiff, arrDampRatio, ipAddress=''):
    cartStiff = DIANA_CART_STIFF()
    cartStiff.values = (c_double*6)()
    cartDampRatio = c_double()
    api_mod.getCartImpeda.argtypes = [
        POINTER(DIANA_CART_STIFF), POINTER(c_double), c_char_p]
    api_mod.getCartImpeda.restype = c_int
    ret = api_mod.getCartImpeda(byref(cartStiff), byref(
        cartDampRatio), bytes(ipAddress.encode('utf-8')))
    for index in range(0, len(cartStiff.values)):
        arrStiff[index] = cartStiff.values[index]
    arrDampRatio[0] = cartDampRatio.value
    return message(ret)

def getRobotNetworkInfo(robotNetworkInfo: list, ipAddress=''):
    api_mod.getRobotNetworkInfo.argtypes = [POINTER(c_char * 256), c_char_p]
    api_mod.getRobotNetworkInfo.restype = c_int
    info = (c_char * 256)()
    ret = api_mod.getRobotNetworkInfo(info, bytes(ipAddress.encode('utf-8')))
    robotNetworkInfo.append(info.value.decode('utf-8'))
    return message(ret)

def setRobotNetworkInfo(currentNetworkInfo, targetNetworkInfo, ipAddress=''):
    api_mod.setRobotNetworkInfo.argtypes = [
        c_char_p, c_char_p, c_char_p]
    api_mod.setRobotNetworkInfo.restype = c_int
    ret = api_mod.setRobotNetworkInfo(bytes(currentNetworkInfo.encode('utf-8')), bytes(
        targetNetworkInfo.encode('utf-8')), bytes(ipAddress.encode('utf-8')))
    return message(ret)

def getFunctionOptI4(funtion_index:function_index_e, opt_name:function_opt_name_e, ipAddress=''):
    opt_value = c_int()
    api_mod.getFunctionOptI4.argtypes = [c_int, c_int, POINTER(c_int), c_char_p]
    api_mod.getFunctionOptI4.restype = c_int
    ret = api_mod.getFunctionOptI4(funtion_index.value, opt_name.value, byref(opt_value), bytes(ipAddress.encode('utf-8')))
    if ret == 0:
        return True, opt_value.value
    else:
        return False, 0

def setFunctionOptI4(funtion_index:function_index_e, opt_name:function_opt_name_e, opt_value, ipAddress=''):
    api_mod.setFunctionOptI4.argtypes = [c_int, c_int, c_int, c_char_p]
    api_mod.setFunctionOptI4.restype = c_int
    ret = api_mod.setFunctionOptI4(funtion_index.value, opt_name.value, opt_value, bytes(ipAddress.encode('utf-8')))
    if ret == 0:
        return True
    else:
        return False

def getFunctionOptR8(funtion_index:function_index_e, opt_name:function_opt_name_e, ipAddress=''):
    opt_value = c_double()
    api_mod.getFunctionOptR8.argtypes = [c_int, c_int, POINTER(c_double), c_char_p]
    api_mod.getFunctionOptR8.restype = c_int
    ret = api_mod.getFunctionOptR8(funtion_index.value, opt_name.value, byref(opt_value), bytes(ipAddress.encode('utf-8')))
    if ret == 0:
        return True, opt_value.value
    else:
        return False, 0

def setFunctionOptR8(funtion_index:function_index_e, opt_name:function_opt_name_e, opt_value, ipAddress=''):
    api_mod.setFunctionOptR8.argtypes = [c_int, c_int, c_double, c_char_p]
    api_mod.setFunctionOptR8.restype = c_int
    ret = api_mod.setFunctionOptR8(funtion_index.value, opt_name.value, opt_value, bytes(ipAddress.encode('utf-8')))
    if ret == 0:
        return True
    else:
        return False